# MatteoTurturiello

./: AllListsObs.cpp  AllListsObs.h  CMakeLists.txt  ListObs.cpp  ListObs.h  Object.cpp  Object.h  Observer.cpp  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.cpp  Subject.h  main.cpp
test/: CMakeLists.txt  ShoppingListSuite.cpp  ShoppingListTest.cpp
